# vacancy-section-generator

./: README.md  pyproject.toml
vacancy_section_generator/: generator.py  main.py
