[tool.poetry]
name = "vacancy-section-generator"
version = "0.1.0"
description = ""
authors = ["OSM HPI <OSM@HPI>"]
readme = "README.md"
packages = [{include = "vacancy_section_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
